# mfsim

./: .gitignore  CLAUDE.md  README.md  Untitled.ipynb  agent_worklog.md  pyproject.toml  pyrightconfig.json  run_backtest.py  todo.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
configs/data_loader/: index_csv.yaml
configs/experiment/: momentum_value_short.yaml  semi_annual_rebal.yaml
configs/strategy/: fixed_allocation.yaml
experiments/: README.md
experiments/001_momentum_value_rotation/: README.md  run.py  run_extended.py
experiments/001_momentum_value_rotation/results/: summary.json  summary.md
experiments/002_adaptive_factor_rotation/: README.md  download_nse_data.py  run_experiment.py
experiments/002_adaptive_factor_rotation/results/: REPORT.md
experiments/003_rerunning_experiment_002/: README.md  run_experiment.py
experiments/003_rerunning_experiment_002/results/: REPORT.md
experiments/004_trigger_rebalancing/: README.md  run_experiment.py
experiments/004_trigger_rebalancing/results/: REPORT.md
mfsim/: README.md  __init__.py  cli.py  introduction_for_llm.md  search.py
mfsim/backtester/: __init__.py  lot_tracker.py  simulator.py
mfsim/configs/: config.yaml
mfsim/configs/data_loader/: mfapi.yaml
mfsim/configs/experiment/: annual_rebal.yaml  fixed_alloc_no_rebal.yaml  mv_50_50_annual_rebal.yaml  mv_50_50_fixed.yaml  mv_dynamic_rotation.yaml  mv_momentum_only.yaml  mv_nifty50_baseline.yaml  mv_value_only.yaml  (+1 more)
mfsim/metrics/: __init__.py  base_metric.py  metrics_collection.py
mfsim/strategies/: __init__.py  adaptive_strategies.py  base_strategy.py  custom_strategy.py
mfsim/utils/: __init__.py  data_loader.py  logger.py  nse_csv_loader.py
tests/: conftest.py  test_data_loader.py  test_lot_tracker.py  test_metrics.py  test_simulator.py  test_trigger_rebalance.py
(+10 files in other folders)
