[project]
name = "mfsim"
version = "0.1.0"
description = "Mutual fund simulation and backtesting framework for Indian mutual funds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bhuvanesh S", email = "bhuvanesh@example.com" },
]
keywords = ["mutual-funds", "backtesting", "simulation", "india", "finance", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "scipy>=1.10",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pyarrow>=23.0.1",
]

[project.scripts]
mfsim-backtest = "mfsim.cli:main"

[project.urls]
Homepage = "https://github.com/Bhuvanesh09/mfsim"
Repository = "https://github.com/Bhuvanesh09/mfsim"
Issues = "https://github.com/Bhuvanesh09/mfsim/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mfsim"]

[tool.hatch.build.targets.wheel.force-include]
"mfsim/configs" = "mfsim/configs"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
